# my-04-ecosystem

./: .gitignore  Cargo.toml  README.md
doc/: README.md
examples/: chat.rs  tokio1.rs
examples/chat_server/: mod.rs
fixtures/: http_test.rest
fixtures/logs/: ecosystem.logs.2024-07-17
migrations/: 20240716082521_shorten.sql
my-04-ecosystem/fixtures/logs/: ecosystem.logs.2024-07-17
src/: config.yml  lib.rs  main.rs
src/chat/: mod.rs
src/shorten/: mod.rs  shorten_service.rs
