[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "io-util"] }
time = "0.3.36"
anyhow = "1.0.86"
tokio-stream = "0.1.15"
thiserror = "1.0.61"
tokio-util = "0.7.11"
futures = "0.3.30"
serde = "1.0.203"
serde_json = "1.0.117"
opentelemetry = "0.23.0"
serde_with = "3.8.1"
tracing = "0.1.40"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
blake3 = "1.5.1"
bytes = "1.6.0"
axum = { version = "0.7.5", features = ["macros"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16.0", features = ["grpc-tonic"] }
tonic = "0.12.0"
tracing-appender = "0.2.3"
nanoid = "0.4.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde_yaml = "0.9.34"
dashmap = "5.5.3"

[dev-dependencies]
axum = "0.7.5"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
console-subscriber = "0.3.0"

http = "1.1.0"
loom = "0.7.2"
nanoid = "0.4.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = "0.23.0"
